--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,8 @@
     (filterChange)="setFilters($any($event))"
   >
   </app-controls>
-  <app-charts [dataForChart]="chartData"></app-charts>
+  <app-charts
+    *ngIf="chartData.data.datasets.length"
+    [dataForChart]="chartData"
+  ></app-charts>
 </div>
